methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:36: error: Unmatched closing brace '}' ignored here
    }
    ^SlugTracking:46: error: Unmatched closing brace '}' ignored here
}
^